--- a/trabalho1/Problema de otimização.ipynb
+++ b/trabalho1/Problema de otimização.ipynb
@@ -2,10 +2,268 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "from deap import base\n",
+    "from deap import creator\n",
+    "from deap import tools\n",
+    "from deap import algorithms\n",
+    "\n",
+    "from pprint import pprint\n",
+    "\n",
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TAM_CROMOSSOMO = 14\n",
+    "TAM_POPULACAO  = 200\n",
+    "\n",
+    "def bit2dec(bits):\n",
+    "    decval = 0\n",
+    "    for i in range(7):\n",
+    "        decval += bits[i] * ( 2 ** i)\n",
+    "\n",
+    "    return decval\n",
+    "\n",
+    "def fitness(cromossomo):\n",
+    "    n1 = bit2dec(cromossomo[:7])\n",
+    "    n2 = bit2dec(cromossomo[7:])\n",
+    "    \n",
+    "    # 50x + 24y ≤ 2400\n",
+    "    # 30x + 33y ≤ 2100\n",
+    "    s1 = 50*n1 + 24*n2\n",
+    "    s2 = 30*n1 + 33*n2\n",
+    "    \n",
+    "    if s1 > 2400 or s2 > 2100:\n",
+    "        return -999,\n",
+    "    \n",
+    "    return s1 + s2,\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a estrategia do fitness\n",
+    "# - weights: define se o problema é de maximizacao (+1) ou minimizacao (-1)\n",
+    "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+    "\n",
+    "# Define a estrutura do cromossomo\n",
+    "creator.create(\"Individual\", list, fitness=creator.FitnessMax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define os componentes para configurar a populacao\n",
+    "toolbox = base.Toolbox()\n",
+    "\n",
+    "# Gerador para os individuos\n",
+    "toolbox.register(\"attr_bool\", random.randint, 0, 1)\n",
+    "\n",
+    "# Inicializador da populacao\n",
+    "toolbox.register(\"individual\", \n",
+    "                 tools.initRepeat, \n",
+    "                 creator.Individual, \n",
+    "                 toolbox.attr_bool, TAM_CROMOSSOMO)\n",
+    "\n",
+    "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cria a populacao inicial\n",
+    "populacao = toolbox.population(n=TAM_POPULACAO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define os operadores geneticos\n",
+    "toolbox.register(\"evaluate\", fitness)\n",
+    "\n",
+    "toolbox.register(\"mate\", tools.cxTwoPoint)\n",
+    "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
+    "#toolbox.register(\"select\", tools.selRoulette)\n",
+    "toolbox.register(\"select\", tools.selTournament, tournsize=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gen\tnevals\tavg    \tstd    \tmin \tmax \n",
+      "0  \t200   \t-570.67\t1213.48\t-999\t3859\n",
+      "1  \t200   \t145.92 \t1767.69\t-999\t4235\n",
+      "2  \t200   \t1115.98\t1936.31\t-999\t4373\n",
+      "3  \t200   \t1931.14\t1789.35\t-999\t4406\n",
+      "4  \t200   \t2252.82\t1780.68\t-999\t4373\n",
+      "5  \t200   \t2560.24\t1801.07\t-999\t4475\n",
+      "6  \t200   \t2676.34\t1898.91\t-999\t4395\n",
+      "7  \t200   \t2861.66\t1891.11\t-999\t4475\n",
+      "8  \t200   \t3094.61\t1860.1 \t-999\t4475\n",
+      "9  \t200   \t3471.36\t1640.62\t-999\t4475\n",
+      "10 \t200   \t3671.06\t1648.92\t-999\t4475\n",
+      "11 \t200   \t4097.3 \t1200   \t-999\t4475\n",
+      "12 \t200   \t4226.91\t1017.03\t-999\t4475\n",
+      "13 \t200   \t4289.19\t940.051\t-999\t4475\n",
+      "14 \t200   \t4268.58\t1012.59\t-999\t4475\n",
+      "15 \t200   \t4340.85\t785.286\t-999\t4475\n",
+      "16 \t200   \t4346.81\t738.131\t-999\t4475\n",
+      "17 \t200   \t4440.94\t396.991\t-999\t4475\n",
+      "18 \t200   \t4272.47\t1012.2 \t-999\t4475\n",
+      "19 \t200   \t4281.87\t1005.81\t-999\t4475\n",
+      "20 \t200   \t4265.72\t1015.07\t-999\t4475\n",
+      "21 \t200   \t4299.2 \t940.885\t-999\t4475\n",
+      "22 \t200   \t4443.74\t387.818\t-999\t4475\n",
+      "23 \t200   \t4336.44\t854.447\t-999\t4475\n",
+      "24 \t200   \t4299.01\t936.889\t-999\t4475\n",
+      "25 \t200   \t4348.23\t779.92 \t-999\t4475\n",
+      "26 \t200   \t4357.14\t721.645\t-999\t4475\n",
+      "27 \t200   \t4324.79\t859.968\t-999\t4475\n",
+      "28 \t200   \t4404.66\t558.579\t-999\t4475\n",
+      "29 \t200   \t4307.58\t934.323\t-999\t4475\n",
+      "30 \t200   \t4239.44\t1078.92\t-999\t4475\n",
+      "31 \t200   \t4292.9 \t938.039\t-999\t4475\n",
+      "32 \t200   \t4355.91\t694.554\t-999\t4475\n",
+      "33 \t200   \t4341.62\t792.99 \t-999\t4475\n",
+      "34 \t200   \t4352.46\t776.642\t-999\t4475\n",
+      "35 \t200   \t4377.99\t677.947\t-999\t4475\n",
+      "36 \t200   \t4334.66\t855.27 \t-999\t4475\n",
+      "37 \t200   \t4353.31\t774.409\t-999\t4475\n",
+      "38 \t200   \t4261.61\t1016.18\t-999\t4475\n",
+      "39 \t200   \t4405.97\t560.228\t-999\t4475\n",
+      "40 \t200   \t4349.06\t775.906\t-999\t4475\n",
+      "41 \t200   \t4375.09\t681.817\t-999\t4475\n",
+      "42 \t200   \t4370.65\t687.892\t-999\t4475\n",
+      "43 \t200   \t4302.21\t937.018\t-999\t4475\n",
+      "44 \t200   \t4287.23\t949.355\t-999\t4475\n",
+      "45 \t200   \t4313.94\t868.077\t-999\t4475\n",
+      "46 \t200   \t4322.23\t864.496\t-999\t4475\n",
+      "47 \t200   \t4235.95\t1078.84\t-999\t4475\n",
+      "48 \t200   \t4307.18\t934.268\t-999\t4475\n",
+      "49 \t200   \t4280.94\t954.781\t-999\t4475\n",
+      "50 \t200   \t4420.42\t429.608\t-999\t4475\n",
+      "51 \t200   \t4386.26\t602.531\t-999\t4475\n",
+      "52 \t200   \t4380.09\t672.106\t-999\t4475\n",
+      "53 \t200   \t4352.1 \t777.797\t-999\t4475\n",
+      "54 \t200   \t4344.77\t784.81 \t-999\t4475\n",
+      "55 \t200   \t4297.51\t881.764\t-999\t4475\n",
+      "56 \t200   \t4327.13\t856.051\t-999\t4475\n",
+      "57 \t200   \t4354.6 \t770.048\t-999\t4475\n",
+      "58 \t200   \t4273.03\t956.112\t-999\t4475\n",
+      "59 \t200   \t4411.47\t455.458\t-999\t4475\n",
+      "60 \t200   \t4274.45\t1007.43\t-999\t4475\n",
+      "61 \t200   \t4331.41\t855.09 \t-999\t4475\n",
+      "62 \t200   \t4391.01\t665.54 \t-999\t4475\n",
+      "63 \t200   \t4347.8 \t705.986\t-999\t4475\n",
+      "64 \t200   \t4257.17\t1020.71\t-999\t4475\n",
+      "65 \t200   \t4229.52\t1086.78\t-999\t4475\n",
+      "66 \t200   \t4259.07\t1014.78\t-999\t4475\n",
+      "67 \t200   \t4196.58\t1145.13\t-999\t4475\n",
+      "68 \t200   \t4316   \t862.773\t-999\t4475\n",
+      "69 \t200   \t4241.43\t1075.95\t-999\t4475\n",
+      "70 \t200   \t4302.85\t937.413\t-999\t4475\n",
+      "71 \t200   \t4332.1 \t855.307\t-999\t4475\n",
+      "72 \t200   \t4355.23\t771.517\t-999\t4475\n",
+      "73 \t200   \t4352.4 \t776.537\t-999\t4475\n",
+      "74 \t200   \t4358.15\t767.135\t-999\t4475\n",
+      "75 \t200   \t4348.84\t713.867\t-999\t4475\n",
+      "76 \t200   \t4473.63\t19.3262\t4201\t4475\n",
+      "77 \t200   \t4288.23\t946.142\t-999\t4475\n",
+      "78 \t200   \t4394.76\t570.315\t-999\t4475\n",
+      "79 \t200   \t4374.32\t677.303\t-999\t4475\n",
+      "80 \t200   \t4225.93\t1134.44\t-999\t4475\n",
+      "81 \t200   \t4361.98\t766.327\t-999\t4475\n",
+      "82 \t200   \t4241.55\t1078.76\t-999\t4475\n",
+      "83 \t200   \t4348.06\t781.839\t-999\t4475\n",
+      "84 \t200   \t4386.15\t667.372\t-999\t4475\n",
+      "85 \t200   \t4358.03\t770.681\t-999\t4475\n",
+      "86 \t200   \t4334.06\t787.126\t-999\t4475\n",
+      "87 \t200   \t4433.57\t401.433\t-999\t4475\n",
+      "88 \t200   \t4305.22\t881.114\t-999\t4475\n",
+      "89 \t200   \t4310.49\t933.753\t-999\t4475\n",
+      "90 \t200   \t4234.12\t1083.32\t-999\t4475\n",
+      "91 \t200   \t4383.4 \t670.689\t-999\t4475\n",
+      "92 \t200   \t4246.64\t1078.47\t-999\t4475\n",
+      "93 \t200   \t4398.58\t577.755\t-999\t4475\n",
+      "94 \t200   \t4230.83\t1086.3 \t-999\t4475\n",
+      "95 \t200   \t4257.03\t1016.4 \t-999\t4475\n",
+      "96 \t200   \t4257.85\t1019.46\t-999\t4475\n",
+      "97 \t200   \t4316.53\t867.25 \t-999\t4475\n",
+      "98 \t200   \t4269.8 \t1009.2 \t-999\t4475\n",
+      "99 \t200   \t4364.68\t698.779\t-999\t4475\n",
+      "100\t200   \t4328.51\t800.38 \t-999\t4475\n"
+     ]
+    }
+   ],
+   "source": [
+    "hof = tools.HallOfFame(10)\n",
+    "stats = tools.Statistics(lambda ind: ind.fitness.values)\n",
+    "stats.register(\"avg\", numpy.mean)\n",
+    "stats.register(\"std\", numpy.std)\n",
+    "stats.register(\"min\", numpy.min)\n",
+    "stats.register(\"max\", numpy.max)\n",
+    "    \n",
+    "pop, log = algorithms.eaSimple(populacao, \n",
+    "                               toolbox, \n",
+    "                               cxpb=1, \n",
+    "                               mutpb=0.1, \n",
+    "                               ngen=100, \n",
+    "                               stats=stats, \n",
+    "                               halloffame=hof, \n",
+    "                               verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 31 | y: 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "melhor = sorted([(x, x.fitness.values) for x in pop], key=lambda x: x[1], reverse= True)[0][0]\n",
+    "\n",
+    "xVal = bit2dec(melhor[:7])\n",
+    "yVal = bit2dec(melhor[7:])\n",
+    "\n",
+    "print(f'x: {xVal} | y: {yVal}')"
+   ]
   }
  ],
  "metadata": {
