--- a/trabalho1/Problema da Mochila.ipynb
+++ b/trabalho1/Problema da Mochila.ipynb
@@ -106,65 +106,118 @@
     "\n",
     "toolbox.register(\"mate\", tools.cxTwoPoint)\n",
     "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
-    "toolbox.register(\"select\", tools.selRoulette)"
+    "toolbox.register(\"select\", tools.selTournament, tournsize=3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define os operadores geneticos\n",
-    "toolbox.register(\"evaluate\", fitness)\n",
-    "\n",
-    "toolbox.register(\"mate\", tools.cxUniform, indpb=0.5)\n",
-    "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
-    "toolbox.register(\"select\", tools.selRoulette)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define os operadores geneticos\n",
-    "toolbox.register(\"evaluate\", fitness)\n",
-    "\n",
-    "toolbox.register(\"mate\", tools.cxTwoPoint)\n",
-    "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
-    "toolbox.register(\"select\", tools.selTournament, tournsize=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define os operadores geneticos\n",
-    "toolbox.register(\"evaluate\", fitness)\n",
-    "\n",
-    "toolbox.register(\"mate\", tools.cxUniform)\n",
-    "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
-    "toolbox.register(\"select\", tools.selTournament, tournsize=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'toolbox' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-df390a1b4f04>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Cria a populacao inicial\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpopulacao\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTAM_POPULACAO\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'toolbox' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1],\n",
+      " [1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+      " [0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0],\n",
+      " [1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0],\n",
+      " [1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0],\n",
+      " [1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1],\n",
+      " [0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1],\n",
+      " [1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0],\n",
+      " [0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1],\n",
+      " [0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0],\n",
+      " [0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1],\n",
+      " [1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0],\n",
+      " [1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      " [0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1],\n",
+      " [1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0],\n",
+      " [0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0],\n",
+      " [1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0],\n",
+      " [1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0],\n",
+      " [1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1],\n",
+      " [0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1],\n",
+      " [1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1],\n",
+      " [0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+      " [0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1],\n",
+      " [1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1],\n",
+      " [0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0],\n",
+      " [0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1],\n",
+      " [1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1],\n",
+      " [1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1],\n",
+      " [1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1],\n",
+      " [1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0],\n",
+      " [0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0],\n",
+      " [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0],\n",
+      " [1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0],\n",
+      " [1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0],\n",
+      " [1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0],\n",
+      " [0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0],\n",
+      " [0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1],\n",
+      " [0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1],\n",
+      " [0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1],\n",
+      " [1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0],\n",
+      " [0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1],\n",
+      " [1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1],\n",
+      " [0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1],\n",
+      " [1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1],\n",
+      " [0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1],\n",
+      " [0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1],\n",
+      " [1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0],\n",
+      " [1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1],\n",
+      " [1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0],\n",
+      " [0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1],\n",
+      " [1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0],\n",
+      " [0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1],\n",
+      " [0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0],\n",
+      " [0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0],\n",
+      " [0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1],\n",
+      " [0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0],\n",
+      " [0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1],\n",
+      " [1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0],\n",
+      " [1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0],\n",
+      " [0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0],\n",
+      " [1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+      " [0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0],\n",
+      " [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1],\n",
+      " [1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1],\n",
+      " [0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0],\n",
+      " [0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0],\n",
+      " [0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1],\n",
+      " [0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1],\n",
+      " [0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1],\n",
+      " [0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1],\n",
+      " [1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0],\n",
+      " [0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0],\n",
+      " [1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1],\n",
+      " [1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1],\n",
+      " [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      " [1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0],\n",
+      " [0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+      " [1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      " [1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1],\n",
+      " [1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+      " [0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0],\n",
+      " [0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1],\n",
+      " [1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+      " [1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1],\n",
+      " [1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1],\n",
+      " [0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1],\n",
+      " [0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1],\n",
+      " [1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0],\n",
+      " [1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1],\n",
+      " [0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0],\n",
+      " [0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0],\n",
+      " [1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0],\n",
+      " [1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1],\n",
+      " [0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1],\n",
+      " [1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1],\n",
+      " [1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1],\n",
+      " [1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1],\n",
+      " [0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1],\n",
+      " [1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1],\n",
+      " [0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1]]\n"
      ]
     }
    ],
@@ -177,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,20 +238,107 @@
      "output_type": "stream",
      "text": [
       "gen\tnevals\tavg  \tstd    \tmin\tmax\n",
-      "0  \t100   \t33.74\t45.8586\t-1 \t143\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cxUniform() missing 1 required positional argument: 'indpb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-f24e8136dab9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                \u001b[0mstats\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                                \u001b[0mhalloffame\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhof\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m                                verbose=True)\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.6/site-packages/deap/algorithms.py\u001b[0m in \u001b[0;36meaSimple\u001b[0;34m(population, toolbox, cxpb, mutpb, ngen, stats, halloffame, verbose)\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m         \u001b[0;31m# Vary the pool of individuals\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m         \u001b[0moffspring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvarAnd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffspring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoolbox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcxpb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmutpb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m         \u001b[0;31m# Evaluate the individuals with an invalid fitness\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.6/site-packages/deap/algorithms.py\u001b[0m in \u001b[0;36mvarAnd\u001b[0;34m(population, toolbox, cxpb, mutpb)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mcxpb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m             offspring[i - 1], offspring[i] = toolbox.mate(offspring[i - 1],\n\u001b[0;32m---> 74\u001b[0;31m                                                           offspring[i])\n\u001b[0m\u001b[1;32m     75\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0moffspring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moffspring\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cxUniform() missing 1 required positional argument: 'indpb'"
+      "0  \t100   \t26.11\t40.9199\t-1 \t131\n",
+      "1  \t100   \t48.64\t47.7273\t-1 \t149\n",
+      "2  \t100   \t69.36\t48.6587\t-1 \t149\n",
+      "3  \t100   \t93.76\t40.6684\t-1 \t149\n",
+      "4  \t100   \t111.1\t36.314 \t-1 \t148\n",
+      "5  \t100   \t113.98\t45.7062\t-1 \t148\n",
+      "6  \t100   \t114.86\t49.8921\t-1 \t148\n",
+      "7  \t100   \t117.53\t50.3429\t-1 \t148\n",
+      "8  \t100   \t115.8 \t54.9694\t-1 \t148\n",
+      "9  \t100   \t122.9 \t50.256 \t-1 \t148\n",
+      "10 \t100   \t135.47\t34.9901\t-1 \t148\n",
+      "11 \t100   \t143.07\t21.485 \t-1 \t148\n",
+      "12 \t100   \t139.53\t32.6495\t-1 \t148\n",
+      "13 \t100   \t141.56\t29.4273\t-1 \t148\n",
+      "14 \t100   \t144.26\t21.2954\t-1 \t148\n",
+      "15 \t100   \t145.48\t15.8843\t-1 \t148\n",
+      "16 \t100   \t145.96\t15.7511\t-1 \t148\n",
+      "17 \t100   \t144.17\t21.2391\t-1 \t148\n",
+      "18 \t100   \t144.97\t20.8588\t-1 \t148\n",
+      "19 \t100   \t147   \t5.89237\t98 \t149\n",
+      "20 \t100   \t144.52\t21.1705\t-1 \t149\n",
+      "21 \t100   \t140.89\t29.7378\t-1 \t149\n",
+      "22 \t100   \t132.46\t44.6409\t-1 \t149\n",
+      "23 \t100   \t132.88\t44.6863\t-1 \t149\n",
+      "24 \t100   \t140.55\t32.9583\t-1 \t149\n",
+      "25 \t100   \t142.43\t29.7019\t-1 \t149\n",
+      "26 \t100   \t145.7 \t21.1686\t-1 \t149\n",
+      "27 \t100   \t147.5 \t14.9248\t-1 \t149\n",
+      "28 \t100   \t143.55\t26.0105\t-1 \t149\n",
+      "29 \t100   \t146.4 \t16.2966\t-1 \t149\n",
+      "30 \t100   \t145.94\t20.9999\t-1 \t149\n",
+      "31 \t100   \t145.9 \t16.7   \t-1 \t149\n",
+      "32 \t100   \t145.3 \t21.571 \t-1 \t149\n",
+      "33 \t100   \t143.15\t26.2684\t-1 \t149\n",
+      "34 \t100   \t147.2 \t15.1908\t-1 \t149\n",
+      "35 \t100   \t146.03\t16.4027\t-1 \t149\n",
+      "36 \t100   \t149   \t0      \t149\t149\n",
+      "37 \t100   \t146.76\t15.1632\t-1 \t149\n",
+      "38 \t100   \t148.27\t5.20741\t99 \t149\n",
+      "39 \t100   \t147.29\t14.9895\t-1 \t149\n",
+      "40 \t100   \t147.95\t6.49211\t94 \t149\n",
+      "41 \t100   \t144.35\t25.6052\t-1 \t149\n",
+      "42 \t100   \t145.3 \t21.3028\t-1 \t149\n",
+      "43 \t100   \t146.83\t15.3942\t-1 \t149\n",
+      "44 \t100   \t145.75\t21.1113\t-1 \t149\n",
+      "45 \t100   \t147.12\t15.1329\t-1 \t149\n",
+      "46 \t100   \t146.88\t15.2127\t-1 \t149\n",
+      "47 \t100   \t143.7 \t26.0943\t-1 \t149\n",
+      "48 \t100   \t146   \t21     \t-1 \t149\n",
+      "49 \t100   \t148.46\t3.40417\t119\t149\n",
+      "50 \t100   \t144.38\t25.5948\t-1 \t149\n",
+      "51 \t100   \t144.24\t23.0044\t-1 \t149\n",
+      "52 \t100   \t146.58\t15.7887\t-1 \t149\n",
+      "53 \t100   \t142.31\t29.6495\t-1 \t149\n",
+      "54 \t100   \t145.78\t21.025 \t-1 \t149\n",
+      "55 \t100   \t144.43\t25.5853\t-1 \t149\n",
+      "56 \t100   \t145.01\t21.6502\t-1 \t149\n",
+      "57 \t100   \t142.44\t29.6383\t-1 \t149\n",
+      "58 \t100   \t145.27\t21.5346\t-1 \t149\n",
+      "59 \t100   \t147.2 \t15.0419\t-1 \t149\n",
+      "60 \t100   \t148.09\t4.39112\t119\t149\n",
+      "61 \t100   \t142.59\t29.4605\t-1 \t149\n",
+      "62 \t100   \t145.27\t21.1811\t-1 \t149\n",
+      "63 \t100   \t145.5 \t21.5116\t-1 \t149\n",
+      "64 \t100   \t143.58\t26.5474\t-1 \t149\n",
+      "65 \t100   \t142.88\t29.3936\t-1 \t149\n",
+      "66 \t100   \t142.75\t29.448 \t-1 \t149\n",
+      "67 \t100   \t144.39\t25.5921\t-1 \t149\n",
+      "68 \t100   \t144.24\t25.6086\t-1 \t149\n",
+      "69 \t100   \t144.25\t25.6649\t-1 \t149\n",
+      "70 \t100   \t143.52\t26.0033\t-1 \t149\n",
+      "71 \t100   \t142.07\t29.7846\t-1 \t149\n",
+      "72 \t100   \t148.88\t1.19398\t137\t149\n",
+      "73 \t100   \t144.44\t25.5845\t-1 \t149\n",
+      "74 \t100   \t147.24\t15.0121\t-1 \t149\n",
+      "75 \t100   \t148.89\t1.09449\t138\t149\n",
+      "76 \t100   \t147.25\t15.1059\t-1 \t149\n",
+      "77 \t100   \t140.89\t32.946 \t-1 \t149\n",
+      "78 \t100   \t143.42\t26.6038\t-1 \t149\n",
+      "79 \t100   \t145.75\t21.1113\t-1 \t149\n",
+      "80 \t100   \t146.54\t15.8999\t-1 \t149\n",
+      "81 \t100   \t147.37\t14.953 \t-1 \t149\n",
+      "82 \t100   \t147.2 \t15.1908\t-1 \t149\n",
+      "83 \t100   \t147.12\t15.0753\t-1 \t149\n",
+      "84 \t100   \t146   \t21     \t-1 \t149\n",
+      "85 \t100   \t147.39\t14.9539\t-1 \t149\n",
+      "86 \t100   \t142.23\t29.5465\t-1 \t149\n",
+      "87 \t100   \t143.11\t26.1461\t-1 \t149\n",
+      "88 \t100   \t147.44\t14.9307\t-1 \t149\n",
+      "89 \t100   \t147   \t15.6844\t-1 \t149\n",
+      "90 \t100   \t144.78\t21.7718\t-1 \t149\n",
+      "91 \t100   \t145.89\t21.0128\t-1 \t149\n",
+      "92 \t100   \t147.73\t7.16639\t99 \t149\n",
+      "93 \t100   \t148.83\t1.24141\t138\t149\n",
+      "94 \t100   \t144.78\t21.8319\t-1 \t149\n",
+      "95 \t100   \t148.09\t8.02383\t69 \t149\n",
+      "96 \t100   \t145.16\t21.3573\t-1 \t149\n",
+      "97 \t100   \t145.14\t21.5504\t-1 \t149\n",
+      "98 \t100   \t148.45\t4.26468\t107\t149\n",
+      "99 \t100   \t147.01\t15.1951\t-1 \t149\n",
+      "100\t100   \t146.66\t15.7374\t-1 \t149\n"
      ]
     }
    ],
@@ -222,9 +362,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'bug repellent'\n",
+      "'clothes'\n",
+      "'dried food'\n",
+      "'first-aid kit'\n",
+      "'flashlight'\n",
+      "'sleeping bag'\n",
+      "'water filter'\n",
+      "([1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1], (149.0,))\n"
+     ]
+    }
+   ],
    "source": [
     "melhor = sorted([(x, x.fitness.values) for x in pop], key=lambda x: x[1], reverse= True)\n",
     "\n",
